- minor bug fixes

--- a/HGNN/dataPrep/Copy_Zip images subset.ipynb
+++ b/HGNN/dataPrep/Copy_Zip images subset.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# defining global variables\n",
     "image_directory='/data/BGNN_data/INHS_cropped'\n",
     "subset = '52'\n",
-    "zip_output_directory = '/data/BGNN_data/52_diagnostics'\n",
+    "zip_output_directory = '/data/BGNN_data/52_diagnostics_2'\n",
     "\n",
     "import os\n",
     "if not os.path.exists(zip_output_directory):\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,13 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3de83350d13c4966ab8701ebf3e605f8",
+       "model_id": "1b7076d6217f4ac994bcf12e535897a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,12 +97,26 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub message rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_msg_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Creating tar file\n",
-      "tar file created\n"
+      "\n"
      ]
     }
    ],
@@ -116,20 +130,25 @@
     "# Save images\n",
     "with tqdm(total=img_count, desc=\"Saving images\") as bar:\n",
     "    for indx, row in csv_file.iterrows(): \n",
-    "        newPath = shutil.copy(os.path.join(image_directory, image_subpath, indx), os.path.join(zip_output_directory, indx))\n",
+    "        sub_dir = os.path.join(zip_output_directory, row[\"scientificName\"])\n",
+    "        if not os.path.exists(sub_dir):\n",
+    "            os.makedirs(sub_dir)\n",
+    "        fileFullName = os.path.join(sub_dir,indx)\n",
+    "        newFile = shutil.copy(os.path.join(image_directory, image_subpath, indx), fileFullName)\n",
+    "        bar.set_postfix(file=newFile)\n",
     "        bar.update()\n",
     "\n",
     "# Save csv file\n",
     "csv_file.to_csv(os.path.join(zip_output_directory,\"metadata.csv\"))\n",
     "\n",
-    "def make_tarfile(output_filename, source_dir):\n",
-    "    with tarfile.open(output_filename, \"w:gz\") as tar:\n",
-    "        tar.add(source_dir, arcname=os.path.basename(source_dir))\n",
-    "    tar.close()\n",
+    "# def make_tarfile(output_filename, source_dir):\n",
+    "#     with tarfile.open(output_filename, \"w:gz\") as tar:\n",
+    "#         tar.add(source_dir, arcname=os.path.basename(source_dir))\n",
+    "#     tar.close()\n",
     "        \n",
-    "print(\"Creating tar file\")\n",
-    "make_tarfile(os.path.join(zip_output_directory,'images.tar.gz'), os.path.join(zip_output_directory))\n",
-    "print(\"tar file created\")"
+    "# print(\"Creating tar file\")\n",
+    "# make_tarfile(os.path.join(zip_output_directory,'images.tar.gz'), os.path.join(zip_output_directory))\n",
+    "# print(\"tar file created\")"
    ]
   },
   {
