--- a/HGNN/dataPrep/Create cleaned metadata.ipynb
+++ b/HGNN/dataPrep/Create cleaned metadata.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataPath=\"/home/elhamod/projects/HGNN/data\"\n",
+    "dataPath=\"/data/BGNN_data\"\n",
     "image_path='INHS_cropped'\n",
-    "output_directory_name=\"52\"\n",
+    "output_directory_name=\"200per\"\n",
     "cleaned_species_csv_fileName = \"cleaned_metadata.csv\"\n",
     "species_csv_fileName = \"metadata.csv\"\n",
-    "numberOfImagesPerSpecies = 50"
+    "numberOfImagesPerSpecies =200"
    ]
   },
   {
@@ -47,27 +47,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "output                    fileName         scientificName        Genus         Family\n",
-      "0      INHS_FISH_103994.jpg       Gambusia affinis     Gambusia    Poeciliidae\n",
-      "1      INHS_FISH_108425.jpg    Notropis stramineus     Notropis     Cyprinidae\n",
-      "2       INHS_FISH_59772.jpg      Lepomis cyanellus      Lepomis  Centrarchidae\n",
-      "3        INHS_FISH_4051.jpg        Noturus gyrinus      Noturus    Ictaluridae\n",
-      "4       INHS_FISH_21948.jpg  Notropis atherinoides     Notropis     Cyprinidae\n",
-      "...                     ...                    ...          ...            ...\n",
-      "2595    INHS_FISH_31114.jpg       Notropis greenei     Notropis     Cyprinidae\n",
-      "2596    INHS_FISH_75551.jpg     Lepomis marginatus      Lepomis  Centrarchidae\n",
-      "2597  INHS_FISH_52739_2.jpg   Lepisosteus oculatus  Lepisosteus  Lepisosteidae\n",
-      "2598    INHS_FISH_81504.jpg       Notropis greenei     Notropis     Cyprinidae\n",
-      "2599    INHS_FISH_85916.jpg   Lepisosteus oculatus  Lepisosteus  Lepisosteidae\n",
+      "output                   fileName         scientificName     Genus         Family\n",
+      "0     INHS_FISH_103994.jpg       Gambusia affinis  Gambusia    Poeciliidae\n",
+      "1     INHS_FISH_108425.jpg    Notropis stramineus  Notropis     Cyprinidae\n",
+      "2      INHS_FISH_59772.jpg      Lepomis cyanellus   Lepomis  Centrarchidae\n",
+      "3       INHS_FISH_4051.jpg        Noturus gyrinus   Noturus    Ictaluridae\n",
+      "4      INHS_FISH_21948.jpg  Notropis atherinoides  Notropis     Cyprinidae\n",
+      "...                    ...                    ...       ...            ...\n",
+      "4395  INHS_FISH_101648.jpg         Noturus miurus   Noturus    Ictaluridae\n",
+      "4396   INHS_FISH_19001.jpg         Noturus miurus   Noturus    Ictaluridae\n",
+      "4397    INHS_FISH_2603.jpg         Noturus miurus   Noturus    Ictaluridae\n",
+      "4398   INHS_FISH_61604.jpg         Noturus miurus   Noturus    Ictaluridae\n",
+      "4399   INHS_FISH_33864.jpg         Noturus miurus   Noturus    Ictaluridae\n",
       "\n",
-      "[2600 rows x 4 columns]\n"
+      "[4400 rows x 4 columns]\n"
      ]
     }
    ],
@@ -111,9 +111,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "elhamod_env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "elhamod_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -125,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
