--- a/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
@@ -29,8 +29,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"/home/elhamod/projects/HGNN/experiments/learnignRateTest\"\n",
+    "experimentName = \"DifferentDatasetSizes\"\n",
     "\n",
+    "\n",
+    "# When adding a new parameter:\n",
+    "# 1- Add it here\n",
+    "# 2- Add it to configParser where necessary\n",
+    "# 3- Run fix parameters jupyter notebook if necessary\n",
+    "\n",
+    "# Do not change the order!\n",
     "params = {\n",
     "    # Do not change for multi/hyperp experiments\n",
     "    \"image_path\": \"INHS_cropped\", # \"/data/BGNN_data/CIFAR\", # \"/data/BGNN_data/INHS_cropped\",\n",
@@ -41,9 +48,9 @@
     "    \"validation_count\":0.16,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 32, # Bigger is more stable\n",
+    "    \"batchSize\": 128, # Bigger is more stable\n",
     "    \"n_epochs\":5000, # allow it to run for long time 4000\n",
-    "    \"learning_rate\":0.01, # Seems 0.0001 to be best value with Adam. 0.1 best for SGD\n",
+    "    \"learning_rate\":0.001, # Seems 0.0001 to be best value with Adam. 0.1 best for SGD\n",
     "    \"numOfTrials\":5,\n",
     "    \"patience\": 50,\n",
     "    \"fc_width\":200,\n",
@@ -52,7 +59,10 @@
     "    \"lambda\": 0.6,\n",
     "    \"unsupervisedOnTest\": False,\n",
     "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
-    "    \"augmented\": False\n",
+    "    \n",
+    "    \"augmented\": False,\n",
+    "    \n",
+    "    \"weight_decay\": 0.0001,\n",
     "}\n",
     "\n",
     "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
@@ -74,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/elhamod/projects/HGNN/experiments/learnignRateTest/params.json'"
+       "'/home/elhamod/HGNN/experiments/DifferentDatasetSizes/params.json'"
       ]
      },
      "execution_count": 3,
@@ -86,11 +96,13 @@
     "cp = ConfigParser(experimentsPath, dataPath, experimentName)\n",
     "\n",
     "hyperp_params = {\n",
+    "    \"suffix\":['52', '100per', '200per']\n",
     "#     \"dummy\":[0]\n",
     "#     \"fc_layers\":[1,2,3],\n",
     "    \n",
     "#     \"imageDimension\": [28, 56, 224],\n",
-    "    \"learning_rate\": [0.0001, 0.001, 0.01, 0.1],\n",
+    "#     \"learning_rate\": [0.0001, 0.001, 0.01, 0.1],\n",
+    "#     \"weight_decay\": [0.0001],\n",
     "#     \"kernelSize\": [5, 9],\n",
     "#     \"useZCAWhitening\": [False, True],\n",
     "#     \"patience\": [100, 200],\n",
@@ -114,14 +126,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 32, 'n_epochs': 5000, 'learning_rate': 0.0001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False}\n",
-      "models/2bc08da4ec736eccce7a09a3c1e82e671ce54e6f850864329ab9f356\n",
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 32, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False}\n",
-      "models/5cdfb74917e6cc3dce6eaacbca406a0460446249495bf1b19d4f2ccf\n",
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 32, 'n_epochs': 5000, 'learning_rate': 0.01, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False}\n",
-      "models/b00f2ddb12d0105857df5ac7616ba69f3e41bf02de9a23539673a4b3\n",
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 32, 'n_epochs': 5000, 'learning_rate': 0.1, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False}\n",
-      "models/a2b9a083334c5015872d3fff54407cca8ad5f8524b52d557d1a74b1e\n"
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False, 'weight_decay': 0.0001}\n",
+      "models/df632ac28b6856060175ba04bb90ca1272001091641eaad00acc5ee3\n",
+      "{'image_path': 'INHS_cropped', 'suffix': '100per', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False, 'weight_decay': 0.0001}\n",
+      "models/5f5e2a09e703a0e0d6d0cbfbacb6123312be7daf07ba9cf91fcea3e6\n",
+      "{'image_path': 'INHS_cropped', 'suffix': '200per', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False, 'weight_decay': 0.0001}\n",
+      "models/70e12bf7d82ba089e5c4537d05c954f7d775a0778026730403409baa\n"
      ]
     }
    ],
@@ -155,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
