--- a/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"DifferentDatasetSizes\"\n",
+    "experimentName = \"DifferentResolutionsNoAugmentation\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -41,7 +41,7 @@
     "params = {\n",
     "    # Do not change for multi/hyperp experiments\n",
     "    \"image_path\": \"INHS_cropped\", # \"/data/BGNN_data/CIFAR\", # \"/data/BGNN_data/INHS_cropped\",\n",
-    "    \"suffix\":'52', #  #'11', '53', None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
+    "    \"suffix\":'52', #  #'11', '52', None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
     "    \n",
     "    # dataset\n",
     "    \"training_count\":0.64,\n",
@@ -61,8 +61,12 @@
     "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
     "    \n",
     "    \"augmented\": False,\n",
-    "    \n",
     "    \"weight_decay\": 0.0001,\n",
+    "\n",
+    "    \"img_res\": 224,\n",
+    "    \"tl_freeze\": True,\n",
+    "    \"cnn_layers\":0,\n",
+    "    \"cnn_channels\":128,\n",
     "}\n",
     "\n",
     "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
@@ -84,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/elhamod/HGNN/experiments/DifferentDatasetSizes/params.json'"
+       "'/home/elhamod/HGNN/experiments/DifferentResolutionsNoAugmentation/params.json'"
       ]
      },
      "execution_count": 3,
@@ -96,7 +100,7 @@
     "cp = ConfigParser(experimentsPath, dataPath, experimentName)\n",
     "\n",
     "hyperp_params = {\n",
-    "    \"suffix\":['52', '100per', '200per']\n",
+    "    \"img_res\":[224, 448]\n",
     "#     \"dummy\":[0]\n",
     "#     \"fc_layers\":[1,2,3],\n",
     "    \n",
@@ -126,12 +130,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False, 'weight_decay': 0.0001}\n",
-      "models/df632ac28b6856060175ba04bb90ca1272001091641eaad00acc5ee3\n",
-      "{'image_path': 'INHS_cropped', 'suffix': '100per', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False, 'weight_decay': 0.0001}\n",
-      "models/5f5e2a09e703a0e0d6d0cbfbacb6123312be7daf07ba9cf91fcea3e6\n",
-      "{'image_path': 'INHS_cropped', 'suffix': '200per', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False, 'weight_decay': 0.0001}\n",
-      "models/70e12bf7d82ba089e5c4537d05c954f7d775a0778026730403409baa\n"
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False, 'weight_decay': 0.0001, 'img_res': 224, 'tl_freeze': True, 'cnn_layers': 0, 'cnn_channels': 128}\n",
+      "models/053018c4ed4536cc5f970502e806156151940b3f497731eac03deb9f\n",
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': True, 'cnn_layers': 0, 'cnn_channels': 128}\n",
+      "models/750c462998c65dc0f08a9c31db243b6b7f6038d18e05c4c6543b59a9\n"
      ]
     }
    ],
