--- a/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"DifferentResolutionsNoAugmentation\"\n",
+    "experimentName = \"FreezeVsTune224\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -60,7 +60,7 @@
     "    \"unsupervisedOnTest\": False,\n",
     "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
     "    \n",
-    "    \"augmented\": False,\n",
+    "    \"augmented\": True,\n",
     "    \"weight_decay\": 0.0001,\n",
     "\n",
     "    \"img_res\": 224,\n",
@@ -88,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/elhamod/HGNN/experiments/DifferentResolutionsNoAugmentation/params.json'"
+       "'/home/elhamod/HGNN/experiments/FreezeVsTune224/params.json'"
       ]
      },
      "execution_count": 3,
@@ -100,7 +100,7 @@
     "cp = ConfigParser(experimentsPath, dataPath, experimentName)\n",
     "\n",
     "hyperp_params = {\n",
-    "    \"img_res\":[224, 448]\n",
+    "    \"tl_freeze\":[False, True]\n",
     "#     \"dummy\":[0]\n",
     "#     \"fc_layers\":[1,2,3],\n",
     "    \n",
@@ -130,10 +130,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False, 'weight_decay': 0.0001, 'img_res': 224, 'tl_freeze': True, 'cnn_layers': 0, 'cnn_channels': 128}\n",
-      "models/053018c4ed4536cc5f970502e806156151940b3f497731eac03deb9f\n",
-      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': False, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': True, 'cnn_layers': 0, 'cnn_channels': 128}\n",
-      "models/750c462998c65dc0f08a9c31db243b6b7f6038d18e05c4c6543b59a9\n"
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 224, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128}\n",
+      "models/572d10764b2088ad577511b4c5f1d5d1c97d627fb917df0a3da5ab66\n",
+      "{'image_path': 'INHS_cropped', 'suffix': '52', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 5000, 'learning_rate': 0.001, 'numOfTrials': 5, 'patience': 50, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 224, 'tl_freeze': True, 'cnn_layers': 0, 'cnn_channels': 128}\n",
+      "models/809ad0535a32bedd38668c34c36f069f943fc73a097a534e6a3ae475\n"
      ]
     }
    ],
